fixes featured datum line-height visual bug on small screens

--- a/app/components/FeaturedDatum.css
+++ b/app/components/FeaturedDatum.css
@@ -21,8 +21,13 @@
     & .featured-datum-title {
       display: inline-block;
       /* typography resets */
-      line-height: 0.5;
+      line-height: 1.25;
       margin-bottom: 0;
+
+      /* keep inline label close to stat on left-aligned layout */
+      @add-mixin from-md {
+        line-height: 0.5;
+      }
     }
 
     & .featured-datum-subtitle {
